[project]
name = "fault-reactivation-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "plotly>=6.5.2",
    "scipy>=1.15.3",
    "streamlit-vertical-slider>=2.5.5",
    "streamlitrunner>=0.1.2",
]
