[project]
name = "fault-reactivation-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "plotly>=6.5.2",
    "scipy>=1.15.3",
    "streamlit-vertical-slider>=2.5.5",
    "streamlitrunner>=0.1.2",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
    "pytest>=8.3.4",
    "black>=26.1.0",
]
docs = [
    "sphinx>=8.1.3",
    "myst-parser>=4.0.0",
    "furo>=2024.8.6",
    "sphinx-copybutton>=0.5.2",
    "sphinxnotes-comboroles>=1.0",
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.18.2",
    "mkdocs-material>=9.6.22",
    "sphinx-paramlinks>=0.6.0",
]

[tool.taskipy.tasks]
docs = { cmd = "make html", cwd = "./docs/sphinx", help = "Make docs with sphinx" }
open = { cmd = "index.html", cwd = "./docs/sphinx/build/html", help = "Open sphinx docs" }
test = { cmd = "pytest", cwd = "./tests", help = "Test with pytest" }

[tool.pytest.ini_options]
addopts = "-rx -vv -s --tb=short"
