[project]
name = "fault-reactivation-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "numpy>=2.2.6",
    "plotly>=6.5.2",
    "scipy>=1.15.3",
    "streamlit-vertical-slider>=2.5.5",
    "streamlitrunner>=0.1.2",
    "tqdm>=4.67.3",
]

[tool.taskipy.tasks]
docs = { cmd = "make html", cwd = "./docs/sphinx", help = "Make docs with sphinx" }
open = { cmd = "index.html", cwd = "./docs/sphinx/build/html", help = "Open sphinx docs" }
test = { cmd = "pytest", cwd = "./tests", help = "Test with pytest" }

[tool.pytest.ini_options]
addopts = "-rx -vv -s --tb=short"
